# hantathon2024

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  .gitignore  pyproject.toml
backend/src/: app.py  config.py
backend/src/routers/: api.py
backend/src/service/: command.py
backend/src/setup/: __init__.py
docs/: installation.md  train.md
frontend/: component.html
frontend/js/: index.js
src/: app.py
src/component/: component.html
src/component/js/: command.js  import.js  index.js
src/exceptions/: __init__.py
src/middleware/: __init__.py
src/models/: __init__.py
src/routers/: __init__.py  api.py
src/service/: command.py  speech2text.py  text2speach.py  text2speech.py
src/setup/: __init__.py  init_model.py  loguru_output.py
train/: dataset.csv  requirements.txt  save.py  save_csv.py  test.py  train.py  uses.py
train/dataset/: __init__.py  detailed_info.py  disabilty.py  legend_info.py  legend_place.py  open_card.py  path.py  search_place.py  search_radius.py  site_info.py
