[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["kematin <kematin@inbox.ru>", "lamberjack"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
loguru = "^0.7.2"
pydantic-settings = "^2.6.1"
faster-whisper = "^1.1.0"
gtts = "^2.5.4"
transformers = "^4.46.3"
torch = "^2.5.1"
pymorphy2 = "0.8" 


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
